--- a/package.json
+++ b/package.json
@@ -31,8 +31,11 @@
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "cors": "^2.8.5",
+    "http-proxy-middleware": "^2.0.6",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
+    "pug": "^3.0.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
