client patients list

--- a/package.json
+++ b/package.json
@@ -33,9 +33,11 @@
     "class-validator": "^0.13.2",
     "cors": "^2.8.5",
     "http-proxy-middleware": "^2.0.6",
+    "lodash.chunk": "^4.2.0",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
     "pug": "^3.0.2",
+    "react-paginate": "^8.1.4",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
