Запуск одной командой

--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
+    "client-install": "npm install --prefix client",
+    "start": "npm run dev",
+    "server":"cd client && npm start",
+    "front":"cd src && npm run start:dev",
+    "dev": "concurrently \"npm run server\" \"npm run front\"",
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
